<resources>
    <string name="app_name">Qferiz Traffic Jam</string>
    <string name="action_settings">Settings</string>
    <string name="button_take_photo">Take a Picture</string>
    <string name="take_photo">Take a Photo</string>
    <string name="username">Rizki Yuniardi</string>
    <string name="email_username">rizki.feriz@gmail.com</string>
    <string name="greeting">Hii...</string>
    <string name="nav_info">Info</string>
    <string name="nav_request">Search</string>
    <string name="nav_sending">Send</string>
    <string name="nav_maps">Maps</string>
    <string name="category">Category</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_activity_info_traffic_detail">ActivityInfoTrafficDetail</string>
    <string name="info_traffic">Lalu Lintas di Jalan Panglima Sudirman Surabaya Kondisi Ramai Lancar.
        Harap utamakan keselamatan. Utamakan Safety Riding. Patuhi rambu-rambu lalu lintas. Happy Nice Day</string>
    <string name="text_send">Fragment Send Info</string>
    <string name="text_request">Fragment Request Info</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_activity_maps">Maps</string>
    <string name="title_activity_activity_about">About</string>
    <string name="title_info">Info</string>
    <string name="title_keterangan">Information</string>
    <string name="txtLokasi">Location</string>
    <string name="txtLatitude">Waiting Latitude..</string>
    <string name="txtLongitude">Waiting Longitude..</string>
    <string name="btnSend">Send</string>

    <string name="option_kondisi">Option Condition</string>
    <string name="tabInfo">INFO</string>
    <string name="tabSearch">SEARCH</string>
    <string name="tabSend">SEND</string>


    <string name="txtKondisi">Condition</string>
    <string name="txtWilayah">Region</string>
    <string name="txtJalan">Road</string>
    <string name="txtNamaJalan">Waiting for Roads..</string>
    <string name="my_location">My Location</string>
    <string name="sync">Sync</string>
    <string name="txtNamaAplikasi">Qferiz Traffic Jam</string>
    <string name="txtVersiAplikasi">Version : 1.0</string>
    <string name="txtProfile">Profile</string>
    <string name="subtitle_nbi_ket">NBI :</string>
    <string name="txtNBI">461103610</string>
    <string name="txtNama">Rizki Yuniardi</string>
    <string name="subtitle_fakultas_ket">Faculty :</string>
    <string name="txtFakultas">Engineering</string>
    <string name="txtJurusan">Informatics</string>
    <string name="txtNamaJudulTA">MAPPING INFORMATION SYSTEM BASED TRAFFIC JAM ON ANDROID</string>
    <string name="txtDeskripsiTA">Description Essay</string>
    <string name="txtNamaDeskripsiTA">Congestion on the roads, especially major cities in Indonesia such as Surabaya is increasingly severe, increasing the volume of the vehicle is not comparable the road conditions are relatively fixed. Therefore it needs a system that provide information about the condition of the roads to be used by the user reference highway in determining the path that will be used to get to the destination.

To the writer wants to create an information system that provides information about the condition of the highway
to road users which can be accessed through a mobile phone / smartphone based on Android as a reference in determining the users of the road to avoid road congestion which occurred on a road.

    </string>

    <string name="option_wilayah">Option Region</string>
    <string name="subtitle_info_ket">Waiting Time..</string>
    <string name="subtitle_info_maps_ket">Location :</string>
    <string name="subtitle_jurusan_ket">Study Program :</string>
    <string name="subtitle_nama_ket">Name :</string>
    <string name="title_activity_activity_take_photo">ActivityTakePhoto</string>
    <string name="title_kondisi">Condition</string>
    <string name="txtJudulTA">Title Of Essay</string>
    <string name="txtKomentar">Add a comment..</string>
    <string name="txtCopyrightAplikasi">© Juny 2015 - Rizki Yuniardi All rights reserved</string>
    <string name="subtitle_universitas_ket">University :</string>
    <string name="txtUniversitas">17 Agustus 1945 Surabaya (UNTAG)</string>
    <string name="subtitle_latitude_ket">Lat :</string>
    <string name="subtitle_longitude_ket">Long :</string>
    <string name="txtKecamatan">Sub-District</string>
    <string name="txtNamaKecamatan">Waiting Sub-District..</string>
    <string name="txtKota">City</string>
    <string name="txtNamaKota">Waiting City..</string>
    <string name="txtPropinsi">Region</string>
    <string name="txtNamaPropinsi">Waiting Region..</string>
    <string name="txtNegara">Country</string>
    <string name="txtNamaNegara">Waiting Country..</string>
    <string name="txtMacet">Jammed</string>
    <string name="txtRamaiLancar">Crowded Smoothly</string>
    <string name="txtLancar">Smooth</string>
    <string name="txtKecelakaan">Accident</string>
    <string name="subtitle_email_ket">Email :</string>
    <string name="subtitle_phone_ket">Phone :</string>
    <string name="txtPhoneNumber">+6285257004040</string>
    <string name="title_activity_activity_info_traffic_maps_detail">ActivityInfoTrafficMapsDetail
    </string>

    <string name="title_waktu">Time</string>
    <string name="subtitle_waktu_ket">Waiting Time..</string>
    <string name="title_lokasi">Location</string>
    <string name="subtitle_lokasi_lat">Lat :</string>
    <string name="title_komentar">Comment</string>
    <string name="subtitle_komentar">Waiting Comment..</string>
    <string name="refresh">REFRESH</string>
    <string name="location_not_load">My Location Not Loaded...</string>
    <string name="title_activity_upload">Please Wait..</string>
    <string name="txtVideo">Video</string>
    <string name="txtCamera">Camera</string>
    <string name="txtGallery">Gallery</string>
    <string name="txtNamaJalanCari">Search for roads..</string>
    <string name="txtTanggalCari">Date</string>
    <string name="txtDateShow">Search date</string>
    <string name="txtConditionShow">Search condition</string>
    <string name="txtDate">Click here to select date</string>
    <string name="txtNamaKotaCari">Search for city..</string>
    <string name="txtCityShow">Search city</string>

</resources>
