<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_action_notifications_on_black_24dp"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_action_search_black_24dp"
            android:title="@string/nav_request" />
        <item
            android:id="@+id/nav_sending"
            android:icon="@drawable/ic_action_send_black_24dp"
            android:title="@string/nav_sending" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_action_map_black_24dp"
            android:title="@string/nav_maps" />
    </group>

    <item android:id="@+id/nav_category"
        android:title="@string/category">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_action_settings_applications_black_24dp"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_info_black_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>


</menu>