<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_send_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qferiz.trafficjam.fragment.FragmentRequestInfo">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_send"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/size_vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilNamaJalanCari"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <EditText
                        android:id="@+id/edNamaJalanCari"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="@dimen/size_horizontal"
                        android:ems="5"
                        android:hint="@string/txtNamaJalanCari"
                        android:inputType="textMultiLine" />

                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <CheckBox
                android:id="@+id/chkCityShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_vertical"
                android:layout_marginLeft="@dimen/size_vertical"
                android:checked="false"
                android:text="@string/txtCityShow" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilNamaKotaCari"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <EditText
                        android:id="@+id/edNamaKotaCari"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="@dimen/size_horizontal"
                        android:ems="5"
                        android:hint="@string/txtNamaKotaCari"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <CheckBox
                android:id="@+id/chkConditionShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_vertical"
                android:layout_marginLeft="@dimen/size_vertical"
                android:checked="false"
                android:text="@string/txtConditionShow" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtKondisiCari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtKondisi"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorInfoSecondaryText" />

                    <Spinner
                        android:id="@+id/spinnerKondisiCari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:dropDownSelector="#37b9ff"
                        android:entries="@array/object_kondisi"
                        android:prompt="@string/option_kondisi" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <CheckBox
                android:id="@+id/chkDateShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_vertical"
                android:layout_marginLeft="@dimen/size_vertical"
                android:checked="false"
                android:text="@string/txtDateShow" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtTanggalCari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTanggalCari"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorInfoSecondaryText" />

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtDate"
                        android:textColor="@color/colorInfoPrimaryText"
                        android:textSize="@dimen/subtitle_size_font" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRequestInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="@dimen/fab_marginTopBottom"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_marginTopBottom"
        android:src="@drawable/ic_action_search_36dp"
        app:fabSize="normal" />

</android.support.design.widget.CoordinatorLayout>
